# s32k118

./: README.md
cmake_practice2/: CMakeLists.txt  config.h.in  led.bat  my_toolchain.cmake
cmake_practice2/inc/: Cpu.h  clock.h  clockMan1.h  device_registers.h  pin_mux.h
cmake_practice2/settings/Linker_Files/: S32K118_25_ram.ld
cmake_practice2/source/: main.c
cmake_practice2/src/: Cpu.c  clockMan1.c  pin_mux.c
